Fix off-canvas overflowing bug

--- a/css/app.css
+++ b/css/app.css
@@ -1,9 +1,12 @@
 /* General Styles */
 
-body {
+html, body {
   font-family: Arial, sans-serif;
   color: #444;
   margin: 0;
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 20px;
@@ -36,6 +39,7 @@ p {
 /* Navigation */
 
 nav {
+  width: 100%;
   height: 52px;
   border-bottom: 1px solid #eee;
   position: relative;
@@ -98,10 +102,11 @@ nav {
 }
 #off-canvas {
   width: 100vw;
+  height: 100vh;
   background: #00bbdf;
   text-align: center;
   position: absolute;
-  top: -13px;
+  top: 0;
   -ms-transform: translateX(100vw);
   -webkit-transform: translateX(100vw);
   transform: translateX(100vw);
